--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -77,7 +77,7 @@ body {
 
 #article-top {
     position: relative;
-    grid-column: 2 / 4;
+    grid-column: 1 / 4;
     grid-row: 1 / 2;
     display: flex;
     flex-wrap: wrap;
@@ -98,6 +98,7 @@ body {
     position: relative;
     width: 69.8%;
     max-height: 100%;
+    padding: 20px;
 }
 
 #intro-card > * {
@@ -138,6 +139,22 @@ body {
     width: 27%;
     border-left: 1px solid #000000;
     direction: rtl;
+    overflow-y: scroll;
+}
+
+.back-text {
+    position: relative;
+    background-color: #000000;
+    color: #FFFFFF;
+    font-family: "Merriweather", sans-serif;
+    font-size: 16px;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.back-text:hover {
+    border-bottom: 5px solid #99BEB1;
+    margin-bottom: 5px;
 }
 
 .article-container {
@@ -345,6 +362,10 @@ body {
     .top-img-container {
         width: 95%;
     }
+
+    #intro-card {
+        padding: 10px;
+    }
 }
 
 .article-img {
@@ -375,9 +396,7 @@ body {
     width: 95%;
     margin-bottom: 20px;
     direction: ltr;
-    justify-content: center;
-    vertical-align: middle;
-
+    padding-bottom: 20px;
 }
 
 .reference-num {
