--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -72,7 +72,9 @@ body {
     grid-row: 1 / 3;
     display: flex;
     flex-wrap: wrap;
+    height: 100vh;
     background-color: #FFFFFF;
+    border-bottom: 1px solid #000000;
 }
 
 #article-top {
@@ -89,16 +91,13 @@ body {
     background-color: #ffffff;
     color: #000000;
     width: 30%;
-    height: 100%;
-    border-top: 1px solid #000000;
-    border-right: 1px solid #000000;
+    border-left: 1px solid #000000;
 }
 
 #intro-card {
     position: relative;
     width: 69.8%;
     max-height: 100%;
-    padding: 20px;
 }
 
 #intro-card > * {
@@ -330,7 +329,7 @@ body {
 .top-img {
     display: flex;
     position: relative;
-    width: 80%;
+    width: 70%;
     border: 1px solid #99BEB1;
     border-radius: 4px;
     margin: 0 auto;
@@ -463,6 +462,7 @@ body {
     -5px 5px rgba(255, 0, 0, 0.25),
     5px -5px rgba(0, 30, 255, 0.25),
     0 0 1em rgb(255, 255, 255), 0 0 0.2em rgb(255, 0, 0);
+    padding-left: 20px;
 }
 
 #albedo-text {
