--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -100,10 +100,8 @@ body {
     grid-column: 2 / 4;
     grid-row: 1 / 5;
     display: flex;
-    flex-wrap: nowrap;
     height: 100%;
     background-color: #FFFFFF;
-    padding-right: 5px;
 }
 
 @media (max-width: 1337px) {
@@ -131,11 +129,10 @@ body {
 
 #bg-top > * {
     position: relative;
-    background-color: #ffffff;
+    background-color: #FFFFFF;
     color: #000000;
     width: 30%;
-    height: 120vh;
-    border-left: 1px solid #000000;
+    height: fit-content;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -144,6 +141,10 @@ body {
     position: relative;
     width: 100%;
     border-bottom: 1px solid #000000;
+    padding: 20px;
+    padding-left: 0px;
+    border-left: none;
+    border-right: 1px solid #000000;
     overflow-y: scroll;
 }
 
@@ -153,6 +154,7 @@ body {
     color: #000000;
     width: 100%;
     margin-top: 5px;
+    min-height: 50vh;
 }
 
 .intro-item {
@@ -162,6 +164,7 @@ body {
 .intro-item > div {
     position: relative;
     width: 100%;
+    min-height: 100%;
     color: #FFFFFF;
     margin: 0 auto;
 }
@@ -213,6 +216,8 @@ body {
     background-color: #000000;
     background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='3' height='3' viewBox='0 0 55 55' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ctext x='10' y='10' fill='whitesmoke'%3ealbedo%3c/text%3e%3c/svg%3e ");
     transition: .5s ease;
+    border-left: 1px solid #FFFFFF;
+    margin-left: 1px;
 }
 
 .article-container:hover {
@@ -490,10 +495,10 @@ body {
 #desc-index {
     position: relative;
     width: 95%;
+    height: fit-content;
     justify-content: space-evenly;
-    background-color: #EEEEEE;
-    border-top: 1px solid #000000;
-    margin: 10px auto;
+    border: 1px solid #000000;
+    margin: 20px auto;
     margin-top: 20px;
 }
 
@@ -764,8 +769,7 @@ body {
 
 @media (max-width:1144px) {
     #bg-top > * {
-        display:flex;
-        flex-wrap:wrap;
+        flex-wrap: wrap;
         width: 100%;
         border-top: none;
     }
@@ -830,11 +834,10 @@ h2 {
 #bg-bottom {
     position: relative;
     width: 100%;
-    height: 40%;
     border: 1px solid #000000;
     display: grid;
     grid-template-columns: 1fr 3fr;
-    grid-template-rows: .2fr 1fr;
+    grid-template-rows: .2fr 3fr;
     opacity: 100%;
     transition: .5s ease;
     padding: 0px;
@@ -848,7 +851,7 @@ h2 {
     border: 1px solid #000000;
     display: grid;
     grid-template-columns: 1fr 3fr;
-    grid-template-rows: .2fr 1fr;
+    grid-template-rows: .2fr 3fr;
     transition: .5s ease;
     padding: 0px;
 }
