restyled to sans-serif font (Merriweather -> DM Sans)

--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -173,7 +173,7 @@ body {
     position: relative;
     background-color: #FFFFFF;
     color: #000000;
-    font-family: "Merriweather", sans-serif;
+    font-family: "DM Sans", sans-serif;
     font-size: 26px;
     padding: 5px;
     border-top: 1px solid #000000;
@@ -555,7 +555,7 @@ body {
     position: relative;
     width: 100%;
     height: fit-content;
-    font-family: "Merriweather", sans-serif;
+    font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
     font-size: 24px;
     font-weight: 400;
@@ -756,7 +756,7 @@ body {
 }
 
 #albedo-text {
-    font-family: "Merriweather", sans-serif;
+    font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
     font-size: 16px;
     font-weight: 400;
