restyled to sans-serif font (Merriweather -> DM Sans)

--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -1128,7 +1128,7 @@ h2 {
     width: 100%;
     grid-column: 1;
     grid-row: 1;
-    font-family: "Merriweather", sans-serif;
+    font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
     font-size: 24px;
     color: #FFFFFF;
