--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -450,9 +450,8 @@ body {
     display: inline-block;
     width: 99.5%;
     margin: 0 auto;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding-bottom: 10px;
-    border-left: 3px solid #99BEB1;
     background-color: #FFFFFF;
 }
 
@@ -470,8 +469,13 @@ body {
 .reference-text {
     position: relative;
     font-family: 'Nunito', sans-serif;
+    background-color: #EEEEEE;
+    color: #000000;
     font-size: 12px;
-    padding-left: 10px;
+    margin: 10px;
+    margin-top: 0px;
+    margin-left: 0px;
+    padding-left: 5px;
     padding-right: 5px;
     text-align: justify;
 }
