--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -114,7 +114,7 @@ body {
 
 #article-top {
     position: relative;
-    max-width: 72.5%;
+    max-width: 80%;
     max-height: 100vh;
     flex-wrap: wrap;
     background-color: #FFFFFF;
@@ -186,7 +186,7 @@ body {
     background-color: #ffffff;
     color: #000000;
     height: 100vh;
-    width: 27%;
+    width: 20%;
     border-left: 10px solid #EEEEEE;
     overflow-y: scroll;
     
@@ -447,7 +447,7 @@ body {
 
 .reference-container {
     position: relative;
-    display: inline-block;
+    display: flex;
     width: 99.5%;
     margin: 0 auto;
     margin-bottom: 10px;
@@ -457,11 +457,13 @@ body {
 
 .reference-num {
     position: relative;
+    min-height: 17.5px;
+    max-height: 17.5px;
+    min-width: 7.5px;
     font-family: 'Nunito', sans-serif;
     font-size: 12px;
     background-color: #000000;
     color: #FFFFFF;
-    border-bottom: 1px solid #99BEB1;
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -474,10 +476,12 @@ body {
     font-size: 12px;
     margin: 10px;
     margin-top: 0px;
-    margin-left: 0px;
+    margin-left: 5px;
     padding-left: 5px;
     padding-right: 5px;
     text-align: justify;
+    border: 1px solid #212529;
+
 }
 
 #albedo-articles-color {
