--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -447,7 +447,9 @@ body {
 
 .reference-container {
     position: relative;
-    display: flex;
+    display: grid;
+    grid-template-columns: .5fr 12fr;
+    grid-template-rows: 1fr;
     width: 99.5%;
     margin: 0 auto;
     margin-bottom: 10px;
@@ -459,13 +461,17 @@ body {
     position: relative;
     min-height: 17.5px;
     max-height: 17.5px;
-    min-width: 7.5px;
+    min-width: 15px;
+    max-width: 15px;
+    grid-column: 1;
+    grid-row: 1;
     font-family: 'Nunito', sans-serif;
     font-size: 12px;
     background-color: #000000;
     color: #FFFFFF;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 2px;
+    padding-right: 2px;
+    text-align: center;
 }
 
 .reference-text {
@@ -481,6 +487,8 @@ body {
     padding-right: 5px;
     text-align: justify;
     border: 1px solid #212529;
+    grid-column: 2;
+    grid-row: 1;
 
 }
 
