--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -149,6 +149,7 @@ body {
 
 .intro-item {
     position: relative;
+    padding-bottom: 15px;
 }
 
 .intro-item > div {
@@ -157,6 +158,11 @@ body {
     min-height: 100%;
     color: #FFFFFF;
     margin: 0 auto;
+    padding-bottom: 5px;
+}
+
+.top-items-bg {
+    background-color: #212529;
 }
 
 .intro-item-titles-projects {
@@ -176,7 +182,7 @@ body {
     font-size: 26px;
     padding: 5px;
     border-top: 1px solid #000000;
-    margin-top: 20px;
+    padding-top: 20px;
 }
 
 #article-citations {
@@ -216,14 +222,13 @@ body {
     background-color: #000000;
     background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='3' height='3' viewBox='0 0 55 55' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ctext x='10' y='10' fill='whitesmoke'%3ealbedo%3c/text%3e%3c/svg%3e ");
     transition: .5s ease;
-    border-left: 1px solid #FFFFFF;
+    border-left: 5px solid #FFFFFF;
     margin-left: 1px;
 }
 
 .article-container:hover {
     background-color: #000000;
     color: #FFFFFF;
-    margin-left: 10px;
     border-left: 5px solid #99BEB1;
 }
 
@@ -280,8 +285,9 @@ body {
     font-size: 12px;
     color: #000000;
     text-align: end;
-    margin-right: 12px;
-    margin-bottom: 12px;
+    padding-right: 12px;
+    padding-bottom: 12px;
+    background-color: #FFFFFF;
 }
 
 .blog-article-container {
@@ -585,7 +591,7 @@ body {
 .persona-sit {
     position: absolute;
     right: -1%;
-    top: -9.5%;
+    top: -9%;
     width: 40px; 
     height: 40px;
     background-size: 100%;
@@ -929,6 +935,7 @@ body {
 
     .intro-item {
         display: flex;
+        justify-content: space-between;
         width: 66vw;
     }
 
@@ -944,8 +951,13 @@ body {
     }
 
     .persona-sit {
-        top: -1.4%;
+        top: -6%;
+        right: -4%;
         z-index: 2;
+    }
+
+    .top-items-bg {
+        margin-bottom: 0px;
     }
 
 }
@@ -979,9 +991,36 @@ body {
 
     .persona-sit-fall {
         right: 0%;
-        top: 5%;
+        top: 4.5%;
         opacity: 100%;
-        
+    }
+
+    .persona-sit-fall::before {
+        position: absolute;
+        font-family: 'DM Sans';
+        top: -60%;
+        left: -80%;
+        width: 40px; 
+        height: 40px;
+        z-index: 1;
+        content: '@media!';
+        color: #000000;
+    }
+
+    .persona-sit-fall::after {
+        position: absolute;
+        font-family: 'DM Sans';
+        top: -10%;
+        left: 0%;
+        width: 40px; 
+        height: 40px;
+        z-index: 1;
+        content: '**';
+        color: #000000;
+    }
+
+    .tech-class-decor::after {
+        width: 100%;
     }
 
 }
@@ -1003,6 +1042,7 @@ h2 {
     position: relative;
     width: 100%;
     border: 1px solid #000000;
+    border-bottom: 1px solid #FFFFFF;
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: .2fr 3fr;
@@ -1015,8 +1055,8 @@ h2 {
 #bg-bottom-2 {
     position: relative;
     width: 100%;
-    height: 40%;
     border: 1px solid #000000;
+    border-bottom: 1px solid #FFFFFF;
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: .2fr 3fr;
@@ -1248,7 +1288,7 @@ h2 {
     margin-top: 0px;
     border-bottom: 1px solid #EEEEEE;
     overflow-x: hidden;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid #EEEEEE;
     background-color: #000000; 
     color: #000000;
 }
@@ -1307,6 +1347,7 @@ h2 {
     text-decoration: none;
     overflow: hidden;
     user-select: none;
+    border-left: 2px solid #000000;
 }
 
 .bar-item-text-secondary {
@@ -1352,6 +1393,7 @@ h2 {
     .bar-items-container:hover {
         overflow: visible;
         background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='3' height='3' viewBox='0 0 55 55' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ctext x='10' y='10' fill='whitesmoke'%3ealbedo%3c/text%3e%3c/svg%3e ");
+
     }
     
     #bar-items-about-container:hover {
@@ -1363,7 +1405,7 @@ h2 {
         color: #EEEEEE;
         text-decoration: underline;
         border-left: 2px solid #99BEB1;
-        border-top: 2px solid #99BEB1;
+        
     }
     
     #bar-items-about-container:hover > .bar-item-text-single {
