--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -172,9 +172,8 @@ body {
     font-size: 26px;
     background-image: url("../img/subtle-dots.png") ;
     background-repeat: repeat-x repeat-y;
-    border-top: 2px solid #99BEB1;
-    border-right: 2px solid #99BEB1;
     border: 1px solid #99BEB1;
+    border-bottom: none;
 }
 
 .intro-item-titles-projects-text {
@@ -670,13 +669,15 @@ body {
     width: 100%;
     height: 30px;
     padding-top: 10px;
+    background-color: none;
 }
 
-.stack-text > p {
+.stack-text-min {
     position: relative;
     height: fit-content;
+    width: fit-content;
     top: 0%;
-    background-color: #000000;
+    text-align: bottom;
 }
 
 .funnel-triangle {
