--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -1,3 +1,5 @@
+html { scroll-behavior: smooth; }
+
 body { 
     background-color: #FFFFFF;
     width: 100vw;
@@ -11,11 +13,9 @@ body {
 #background {
     position: relative;
     min-width: 100vw;
-    height: 100%;
     display: grid;
     grid-template-columns: 150px 1fr 3fr;
     grid-template-rows: 2fr;
-    border-top: 1px solid #000000;
     z-index: 0;
     background-image: url("../img/subtle-dots.png");
     background-repeat: repeat-x repeat-y;
@@ -34,8 +34,8 @@ body {
 }
 
 .intra-link {
-    text-decoration: none;
-    color: #ffffff;
+    text-decoration: underline 2px solid;
+    color: #000000;
 
 }
 
@@ -98,11 +98,16 @@ body {
     z-index: 5;
 }
 
+#about-sidebar {
+    text-decoration: none;
+    color: #000000;
+}
+
 #bg-top {
     position: relative;
     grid-column: 2 / 4;
     grid-row: 1 / 5;
-    display: flex;
+    display: grid;
     height: 100%;
 }
 
@@ -112,7 +117,6 @@ body {
     max-height: 100vh;
     flex-wrap: wrap;
     background-color: #FFFFFF;
-    overflow: scroll;
 }
 
 .article-item {
@@ -120,21 +124,8 @@ body {
     overflow: visible;
 }
 
-#bg-top > * {
-    position: relative;
-    color: #000000;
-    width: 30%;
-    height: fit-content;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
 #intro-card {
     position: relative;
-    width: 100%;
-    padding: 20px;
-    padding-top: 0px;
-    padding-left: 0px;
     border-left: none;
     overflow: hidden;
 }
@@ -142,14 +133,14 @@ body {
 #intro-card > * {
     position: relative;
     color: #000000;
-    width: 100%;
     padding-top: 15px;
     min-height: 50vh;
 }
 
 .intro-item {
     position: relative;
-    padding-bottom: 15px;
+    padding: 50px;
+    border-bottom: 1px solid #000000;
 }
 
 .intro-item > div {
@@ -167,20 +158,17 @@ body {
 
 .intro-item-titles-projects {
     position: relative;
-    background-color: #ffffff;
+    background-color: #ffffff00;
     font-family: "DM Sans", sans-serif;
     font-size: 26px;
-    background-image: url("../img/subtle-dots.png") ;
     background-repeat: repeat-x repeat-y;
-    border: 1px solid #99BEB1;
     border-bottom: none;
 }
 
 .intro-item-titles-projects-text {
-    background-color: #212529;
+    color: #000000;
+    text-decoration: underline 2px solid;
     width: fit-content;
-    padding-left: 5px;
-    padding-right: 5px;
 }
 
 .intro-item-titles {
@@ -213,13 +201,14 @@ body {
     font-family: "Merriweather", sans-serif;
     font-size: 16px;
     padding-top: 2.5px;
+    padding-left: 5px;
     padding-bottom: 2.5px;
     margin-bottom: 10px;
+    border-bottom: 5px solid #FFFFFF;
 }
 
 .back-text:hover {
     border-bottom: 5px solid #99BEB1;
-    margin-bottom: 5px;
 }
 
 .article {
@@ -234,7 +223,7 @@ body {
     background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='3' height='3' viewBox='0 0 55 55' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ctext x='10' y='10' fill='whitesmoke'%3ealbedo%3c/text%3e%3c/svg%3e ");
     transition: .5s ease;
     border-left: 5px solid #FFFFFF;
-    margin-left: 1px;
+    margin-left: -5px;
 }
 
 .article-container:hover {
@@ -275,6 +264,7 @@ body {
     min-height: 20%;
     color: #FFFFFF;
     font-family: "Merriweather", sans-serif;
+    font-size: 12px;
     text-align: start;
     padding: 5px;
 }
@@ -424,6 +414,11 @@ body {
     background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='3' height='3' viewBox='0 0 55 55' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ctext x='10' y='10' fill='whitesmoke'%3ealbedo%3c/text%3e%3c/svg%3e ");
 }
 
+#desc-top {
+    padding: 50px;
+    padding-top: 25px;
+}
+
 @media (max-width: 750px) {
 
     #bg-top {
@@ -530,10 +525,6 @@ body {
     0 0 1em rgb(255, 255, 255), 0 0 0.2em rgb(255, 0, 0);
 }
 
-#desc-top {
-
-}
-
 #desc-index {
     position: relative;
     width: 100%;
@@ -594,7 +585,7 @@ body {
 
 .persona {
     position: absolute;
-    right: 0%;
+    left: 15%;
     bottom: -5%;
     width: 35px; 
     height: 35px; 
@@ -666,13 +657,14 @@ body {
     font-size: 24px;
     font-weight: 400;
     text-align: bottom;
-    width: 100%;
+    width: 40%;
     height: 30px;
     padding-top: 10px;
     background-color: none;
+    padding-bottom: 5px;
 }
 
-.stack-text-min {
+#stack-text-min {
     position: relative;
     height: fit-content;
     width: fit-content;
@@ -699,6 +691,7 @@ body {
 
 .icons-box {
     position: relative;
+    background-color: #FFFFFF;
     display: flex;
     flex-wrap: wrap;
     width: 33%;
@@ -796,7 +789,7 @@ body {
 .secondary-tech-label {
     position: relative;
     font-family: 'DM Sans', sans-serif;
-    width: 100%;
+    min-width: 100%;
     font-size: 14px;
     color: #212529;
     padding: 4px;
@@ -884,8 +877,8 @@ body {
     position: relative;
     display: inline-block;
     margin: 0 auto;
-    border-top: 1px solid #99BEB1;
     border-radius: 4px;
+    padding-top: 5px;
 }
 
 .albedo-text-container-old::before {
@@ -932,112 +925,6 @@ body {
     padding-right: 10px;
     padding-left: 10px;
     box-shadow: 5px 5px 0px -2px rgba(0,0,0,0.75);
-}
-
-@media (max-width:1144px) {
-    #bg-top > * {
-        flex-wrap: wrap;
-        width: 100%;
-        border-top: none;
-    }
-
-    #intro-card {
-        width: 100%;
-    }
-
-    #article-top {
-        min-width: 100%;
-    }
-
-    .intro-item {
-        justify-content: space-between;
-        width: 66vw;
-    }
-
-    #article-citations {
-        position: relative;
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-    }
-
-    .reference-container {
-        margin: 0 auto;
-    }
-
-    .persona-sit {
-        top: -6%;
-        right: -4%;
-        z-index: 2;
-    }
-
-    .top-items-bg {
-        margin-bottom: 0px;
-    }
-
-}
-
-@media (max-width: 748px) {
-    .article-text {
-        font-size: 14px;
-        padding: 5px;
-    }
-
-    .stack-icons-container {
-        flex-direction: column;
-    }
-
-    .icons-box {
-        width: 98%;
-    }
-
-    .stack-img {
-        width: 25%;
-        height: 25%;
-    }
-
-    .tech-class-decor::before {
-        border: none;
-    }
-
-    .persona-sit {
-        opacity: 0%;
-    }
-
-    .persona-sit-fall {
-        right: 0%;
-        top: 4.5%;
-        opacity: 100%;
-    }
-
-    .persona-sit-fall::before {
-        position: absolute;
-        font-family: 'DM Sans';
-        top: -60%;
-        left: -80%;
-        width: 40px; 
-        height: 40px;
-        z-index: 1;
-        content: '@media!';
-        color: #000000;
-    }
-
-    .persona-sit-fall::after {
-        position: absolute;
-        font-family: 'DM Sans';
-        top: -10%;
-        left: 0%;
-        width: 40px; 
-        height: 40px;
-        z-index: 1;
-        content: '**';
-        color: #000000;
-    }
-
-    .tech-class-decor::after {
-        width: 100%;
-    }
-
 }
 
 h1 {
@@ -1294,23 +1181,18 @@ h2 {
 
 .bar-items-container {
     width: 100%;
-    height: 47.5vh;
-    max-height: 47.5vh;
+    height: 10vh;
     display: grid;
     grid-template-columns: 150px 200px;
-    background-color: #000000;
     grid-template-rows: 1fr;
     margin-top: 0px;
-    border-bottom: 1px solid #EEEEEE;
     overflow-x: hidden;
-    border-bottom: 1px solid #EEEEEE;
-    background-color: #000000; 
     color: #000000;
 }
 
 #bar-items-about-container {
     width: 100%;
-    height: 10vh;
+    min-height: 50%;
     display: grid;
     grid-template-columns: 150px 200px;
     grid-template-rows: 1fr;
@@ -1347,22 +1229,21 @@ h2 {
 
 .bar-item-text {
     position: relative;
-    height: 100%;
+    min-height: 100%;
     max-height: 100%;
-    width: 100%;
     grid-column: 1;
     grid-row: 1;
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
-    font-size: 24px;
-    color: #FFFFFF;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    font-size: 28px;
+    line-height: 245%;
+    color: #212529;
     text-decoration: none;
+    padding-right: 5px;
+    padding-left: 5px;
+    margin: 0 auto;
     overflow: hidden;
     user-select: none;
-    border-left: 2px solid #000000;
 }
 
 .bar-item-text-secondary {
@@ -1407,8 +1288,7 @@ h2 {
 @media(hover: hover) and (pointer: fine) {
     .bar-items-container:hover {
         overflow: visible;
-        background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='3' height='3' viewBox='0 0 55 55' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ctext x='10' y='10' fill='whitesmoke'%3ealbedo%3c/text%3e%3c/svg%3e ");
-
+        background-color: #000000;
     }
     
     #bar-items-about-container:hover {
@@ -1417,10 +1297,14 @@ h2 {
     
     .bar-items-container:hover .bar-item-text {
         font-optical-sizing: auto;
-        color: #EEEEEE;
         text-decoration: underline;
-        border-left: 2px solid #99BEB1;
-        
+        color: #FFFFFF;
+    }
+
+    .bar-items-container:hover #about-sidebar{
+        font-optical-sizing: auto;
+        text-decoration: underline;
+        color: #FFFFFF;
     }
     
     #bar-items-about-container:hover > .bar-item-text-single {
