--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -122,6 +122,11 @@ body {
 .article-item {
     position: relative;
     overflow: visible;
+    background-image: url("../img/subtle-dots.png");
+}
+
+.article-item > div {
+    background-image: url("../img/subtle-dots.png");
 }
 
 #intro-card {
@@ -184,11 +189,11 @@ body {
     position: fixed;
     right: 0%;
     top: 0%;
-    background-color: #ffffff;
+    background-color: #EEEEEE;
     color: #000000;
     height: 100vh;
     width: 20%;
-    border-left: 10px solid #EEEEEE;
+    border-left: 1px solid #000000;
     overflow-y: scroll;
     
 }
@@ -296,7 +301,7 @@ body {
     max-height: 100%;
     width: 95%;
     background-color: #000000;
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='3' height='3' viewBox='0 0 55 55' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ctext x='10' y='10' fill='whitesmoke'%3ealbedo%3c/text%3e%3c/svg%3e ");
+    background-image: url("../img/subtle-dots.png");
     transition: .5s ease;
     margin: 10px;
 }
@@ -363,6 +368,7 @@ body {
     background-color: #FFFFFF;
     color: #212529;
     text-align: justify;
+    display: table;
 }
 
 .bullet-list {
@@ -529,10 +535,9 @@ body {
     padding-left: 5px;
     padding-right: 5px;
     text-align: justify;
-    border: 1px solid #212529;
     grid-column: 2;
     grid-row: 1;
-
+    border-top: 20px solid #FFFFFF;
 }
 
 #albedo-articles-color {
