--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -40,7 +40,7 @@ body {
 }
 
 .intra-link:hover {
-    text-decoration: underline black;
+    text-decoration: underline 2px solid #99BEB1;
     text-decoration-thickness: 2px;
 }
 
@@ -122,11 +122,10 @@ body {
 .article-item {
     position: relative;
     overflow: visible;
-    background-image: url("../img/subtle-dots.png");
 }
 
 .article-item > div {
-    background-image: url("../img/subtle-dots.png");
+    background-color: transparent;
 }
 
 #intro-card {
@@ -164,8 +163,10 @@ body {
 .intro-item-titles-projects {
     position: relative;
     background-color: #ffffff00;
-    font-family: "DM Sans", sans-serif;
-    font-size: 26px;
+    font-family: "JetBrains Mono", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-size: 18px;
     background-repeat: repeat-x repeat-y;
     border-bottom: none;
 }
@@ -179,8 +180,10 @@ body {
 .intro-item-titles {
     position: relative;
     color: #000000;
-    font-family: "DM Sans", sans-serif;
-    font-size: 26px;
+    font-family: "JetBrains Mono", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-size: 18px;
     padding-top: 20px;
     
 }
@@ -189,7 +192,6 @@ body {
     position: fixed;
     right: 0%;
     top: 0%;
-    background-color: #EEEEEE;
     color: #000000;
     height: 100vh;
     width: 20%;
@@ -224,16 +226,23 @@ body {
     position: relative;
     min-height: 33%;
     max-height: 100%;
-    background-color: #000000;
-    transition: .5s ease;
     border-left: 5px solid #FFFFFF;
+    border-top: 1px solid #FFFFFF;
     margin-left: -5px;
 }
 
 .article-container:hover {
+    color: #000000;
+}
+
+.article-container:hover .quote-scroll {
+    border-top: 2px solid #99BEB1;
     background-color: #000000;
     color: #FFFFFF;
-    border-left: 5px solid #99BEB1;
+}
+
+.article-container:hover .quote-attrib span {
+    border-bottom: 1px solid #99BEB1;
 }
 
 .quote-scroll {
@@ -241,43 +250,37 @@ body {
     position: relative;
     width: 100%;
     line-height: 160%;
-    font-family: "Merriweather", sans-serif;
+    font-family: "JetBrains Mono", serif;
     font-optical-sizing: auto;
-    font-size: 22px;
     font-weight: 400;
-    padding: 2.5px;
-    padding-top: none;
-    background-color: #EEEEEE;
+    font-size: 18px;
+    padding-left: .5rem;
+    font-style: normal;
+    background-color: transparent;
     color: #000000;
-    border-left: 1px solid #000000;
-    border-top: 1px solid #000000;
+    border-top: 2px solid #000000;
     border-right: 2px solid #ffffff;
     border-bottom: 2px solid #ffffff;
-    transition: .25s ease;
-}
-
-.article-container:hover .quote-scroll {
-    border-bottom: 2px solid #99BEB1;
-    border-right: 2px solid #99BEB1;
-    background-color: #000000;
-    color: #FFFFFF;
 }
 
 .quote-subheading {
     position: relative;
     min-height: 20%;
-    color: #FFFFFF;
-    font-family: "Merriweather", sans-serif;
+    font-family: "JetBrains Mono", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
     font-size: 12px;
     text-align: start;
+    color: #000000;
     padding: 5px;
+    padding-left: 20px;
 }
 
 .quote-date {
     position: relative;
     min-height: 20%;
-    font-family: "Merriweather", sans-serif;
-    color: #FFFFFF;
+    font-family: "JetBrains Mono", serif;
+    color: #000000;
     font-size: 10px;
     text-align: end;
     padding: 5px;
@@ -287,7 +290,10 @@ body {
 .quote-attrib {
     position: relative;
     min-width: 50%;
-    font-size: 12px;
+    font-family: "JetBrains Mono", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-size: 10px;
     color: #000000;
     text-align: end;
     padding-right: 12px;
@@ -299,9 +305,7 @@ body {
     min-height: 33%;
     max-height: 100%;
     width: 95%;
-    background-color: #000000;
-    background-image: url("../img/subtle-dots.png");
-    transition: .5s ease;
+    background-color: transparent;
     margin: 10px;
 }
 
@@ -314,13 +318,10 @@ body {
     font-optical-sizing: auto;
     font-size: 22px;
     font-weight: 400;
-    padding: 2.5px;
-    padding-top: none;
-    background-color: #EEEEEE;
+    background-color: transparent;
     color: #000000;
-    border-right: 2px solid #ffffff;
-    border-bottom: 2px solid #ffffff;
-    transition: .25s ease;
+    border-right: 2px solid #000000;
+    border-bottom: 2px solid #000000;
 }
 
 .article-subheading {
@@ -337,7 +338,7 @@ body {
     min-height: 20%;
     width: 95%;
     font-family: "Merriweather", sans-serif;
-    color: #FFFFFF;
+    color: #000000;
     font-size: 10px;
     text-align: end;
     padding: 5px;
@@ -347,9 +348,8 @@ body {
 .article-section-heading {
     width: fit-content;
     font-size: 18px;
-    color: #FFFFFF;
-    background-color: #000000;
-    padding-left: 10px;
+    color: #000000;
+    background-color: transparent;
     padding-right: 10px;
     margin-top: 30px;
     border-bottom: 2px solid #99BEB1;
@@ -359,6 +359,7 @@ body {
 .article-text {
     position: relative;
     padding: 30px;
+    padding-top: 10px;
     padding-right: 10px;
     font-family: "Merriweather", sans-serif;
     font-size: 14px;
@@ -406,8 +407,9 @@ body {
     position: relative;
     min-height: 20%;
     width: fit-content;
-    color: #FFFFFF;
-    background-color: #000000;
+    color: #000000;
+    border-bottom: 1px solid;
+    background-color: transparent;
     font-family: "Merriweather", sans-serif;
     font-size: 1em;
     text-align: center;
@@ -419,7 +421,7 @@ body {
 
 #desc-top {
     padding: 50px;
-    padding-top: 25px;
+    padding-top: 0px;
 }
 
 @media (max-width:1144px) {
@@ -523,7 +525,8 @@ body {
 .reference-text {
     position: relative;
     font-family: 'Nunito', sans-serif;
-    background-color: #EEEEEE;
+    background-color: transparent;
+    border-left: 2px solid;
     color: #000000;
     font-size: 12px;
     margin: 10px;
@@ -534,23 +537,22 @@ body {
     text-align: justify;
     grid-column: 2;
     grid-row: 1;
-    border-top: 20px solid #FFFFFF;
 }
 
 #albedo-articles-color {
     position: relative;
     font-family: "Jersey 20", sans-serif;
     line-height: 110%;
-    padding-left: 5px;
+    padding-left: 10px;
     padding-right: 5px;
     font-weight: 200;
-    font-size: 28px;
+    font-size: 26px;
     font-style: normal;
     color: rgb(255, 255, 255);
     text-shadow: 
     2px 2px #000000,
-    -5px 5px rgba(255, 0, 0, 0.25),
-    5px -5px rgba(0, 30, 255, 0.25),
+    -2.5px 2.5px rgba(255, 0, 0, 0.25),
+    2.5px -2.5px rgba(0, 30, 255, 0.25),
     0 0 1em rgb(255, 255, 255), 0 0 0.2em rgb(255, 0, 0);
 }
 
@@ -560,7 +562,6 @@ body {
     height: fit-content;
     justify-content: space-evenly;
     margin: 20px auto;
-    margin-top: 20px;
 }
 
 #desc-main {
@@ -613,9 +614,8 @@ body {
 }
 
 .persona {
-    position: absolute;
-    left: 15%;
-    bottom: -5%;
+    position: relative;
+    float: end;
     width: 35px; 
     height: 35px; 
     background: url('../img/persona.png') 100% 100% no-repeat;
@@ -681,12 +681,12 @@ body {
 
 .stack-text {
     position: relative;
-    font-family: "DM Sans", sans-serif;
+    display: flex;
+    font-family: "JetBrains Mono", serif;
     font-optical-sizing: auto;
-    font-size: 24px;
     font-weight: 400;
+    font-size: 18px;
     text-align: bottom;
-    width: 40%;
     height: 30px;
     padding-top: 10px;
     background-color: none;
@@ -941,11 +941,11 @@ body {
 }
 
 #albedo-text {
-    font-family: "DM Sans", sans-serif;
-    font-size: 1rem;
+    font-family: "JetBrains Mono", serif;
+    font-optical-sizing: auto;
     font-weight: 400;
+    font-size: 14px;
     line-height: 225%;
-    text-align: left;
     margin: 0 auto;
     margin-bottom: 10px;
     background-color: #EEEEEE;
@@ -1036,7 +1036,8 @@ h2 {
     inset 5px 0px 0px 0px rgb(52, 56, 55);
     font-family: 'DM Sans', sans-serif;
     font-size: 32px;
-    font-weight: 500;
+    font-weight: 400;
+    font-kerning: none;
     padding-left: 10px;
     color: #EEEEEE;
     opacity: 100%;
@@ -1264,8 +1265,8 @@ h2 {
     grid-row: 1;
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
-    font-size: 28px;
-    line-height: 245%;
+    font-size: 22px;
+    line-height: 325%;
     color: #212529;
     text-decoration: none;
     padding-right: 5px;
